fleshing out the structure

--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,15 @@ sitepackages = False
 deps = pytest
 usedevelop = True
 commands = pytest tests
+
+
+[testenv:docs-auto]
+whitelist_externals = echo
+commands =
+    pip install {toxinidir}[docs]
+    mkdocs build --clean
+    echo "###### Starting local server. Press Control+C to stop server ######"
+    mkdocs serve
+
+
+
