secrets, css., etc

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,6 @@ deps = pytest
 usedevelop = True
 commands = pytest tests
 
-
 [testenv:docs-auto]
 whitelist_externals = echo
 commands =
@@ -21,5 +20,22 @@ commands =
     echo "###### Starting local server. Press Control+C to stop server ######"
     mkdocs serve
 
+[testenv:docs-clean]
+whitelist_externals = rm
+usedevelop = False
+commands = rm -rf site
 
+[testenv:docs-deploy]
+usedevelop = False
+commands =
+    pip install {toxinidir}[docs]
+    mkdocs gh-deploy --clean
 
+[testenv:docs-deploy-force]
+whitelist_externals = git
+usedevelop = False
+commands =
+    pip install {toxinidir}[docs]
+    - git branch -D gh-pages
+    - git push origin --delete gh-pages
+    mkdocs gh-deploy --clean
