--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-flask==0.11.1
-flask-login==0.4.0
-flask-uploads==0.2.1
-flask-wtf==0.13.1
-plumbum==1.6.2
-tinydb==3.2.1
+# these versions where tested, when this was taught last
+#flask==0.11.1
+#flask-login==0.4.0
+#flask-uploads==0.2.1
+#flask-wtf==0.13.1
+#plumbum==1.6.2
+#tinydb==3.2.1
+
+#
+flask
+flask-login
+flask-uploads
+flask-wtf
+plumbum
+tinydb
