--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,9 @@ deps = pytest
 usedevelop = True
 commands = pytest tests
 
+[testenv:dev]
+description = dev env at {envdir}
+
 [testenv:docs-auto]
 whitelist_externals = echo
 commands =
